# Proof-Agent

./: .gitignore  .tmp_gemini_probe.py  README.md  agent_architecture_final.md  agents.py  app_config.py  candidate_memory.py  convert_pdf_to_markdown.py  customized_prompts.json  literature_rag.py  main.py  memory_admin.py  memory_admin_web.out  memory_admin_web.py  nohup.out  nohup1.out  nohup2.out  nohup3.out  pyproject.toml  reporting.py  research_system.py  start_main.sh  test_api_status.py  verification_tools.py
artifacts/: section6_198_S2_obligation_certificate.json  section6_198_lemma_ledger.jsonl  section6_198_plans.jsonl
artifacts/reports/: research_output.md  research_output_20260309_071108_改进论文中的bound_达到更紧的结果_15f7a7b3_gemini-3.1-flash-lite-preview_arch0.3_pi0.7_gen0.7_rev0.7-0.7-0.7_stream0_to3000_marker.md  research_output_20260309_083027_改进论文中的bound_达到更紧的结果_15f7a7b3_gemini-3-flash-preview_arch0.3_pi0.7_gen0.7_rev0.7-0.7-0.7_stream1_to3000_marker.md  research_output_20260310_065350_改进论文中的bound_达到更紧的结果_15f7a7b3_gemini-3.1-pro-preview_arch0.3_pi0.7_gen0.7_rev0.7-0.7-0.7_stream1_to3000_marker.md  research_output_20260310_104016_改进论文中的bound_达到更紧的结果_15f7a7b3_gemini-3.1-pro-preview_arch0.3_pi0.7_gen0.7_rev0.7-0.7-0.7_stream1_to3000_marker.md  (+6 more)
deprecated/: README.md
deprecated/docs/: agent_architecture_relaxed.md  potential_function_requirements.md
deprecated/scripts/: export_candidates.py  (+2 more)
docs/: PROJECT_OVERVIEW.md  Rethlas_Archon_final.pptx  current_project_architecture_summary.md  section6_contracts_review.md
tests/: test_regressions.py  test_relaxed.py
(+35 files in other folders)
